--- a/app/globals.css
+++ b/app/globals.css
@@ -5,19 +5,19 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --font-hawainas: 'Hawainas', sans-serif;
-  --font-halodek: 'HaloDek', sans-serif;
+  --font-hawainas: "Hawainas", sans-serif;
+  --font-halodek: "HaloDek", sans-serif;
 }
 
 @font-face {
-  font-family: 'Hawainas';
-  src: url('/fonts/Hawainas.woff') format('woff');
+  font-family: "Hawainas";
+  src: url("/fonts/Hawainas.woff") format("woff");
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'HaloDek';
-  src: url('/fonts/HaloDek.otf') format('opentype');
+  font-family: "HaloDek";
+  src: url("/fonts/HaloDek.otf") format("opentype");
   font-weight: 400;
 }
 
@@ -32,13 +32,49 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: var(--font-open-sans), sans-serif;
-  
 }
-
-
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.fondo {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.gradiente {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #1e3c72, #2a5298, #4f6d8b, #2a5298);
+  background-size: 400% 400%;
+  animation: gradienteAnimado 10s ease infinite;
+}
+
+@keyframes gradienteAnimado {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
+.contenidos {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  z-index: 10;
 }
