--- a/app/globals.css
+++ b/app/globals.css
@@ -30,8 +30,9 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+
   font-family: var(--font-open-sans), sans-serif;
+  background: linear-gradient(45deg, #1e3c72, #2a5298, #4f6d8b, #2a5298);
 }
 
 @layer utilities {
@@ -52,7 +53,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #1e3c72, #2a5298, #4f6d8b, #2a5298);
+  background: linear-gradient(45deg, #e6a927, #1c63a5, #4f6d8b, #2a5298);
   background-size: 400% 400%;
   animation: gradienteAnimado 10s ease infinite;
 }
@@ -70,11 +71,48 @@ body {
 }
 
 .contenidos {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  margin-top: 8rem;
+  min-height: 500px;
   color: white;
   z-index: 10;
+  overflow-x: hidden;
+}
+.corner-images {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden !important;
+}
+
+.palma {
+  position: absolute;
+  max-width: 400px;
+  width: auto;
+  height: auto;
+}
+
+.top-left {
+  top: 0;
+  left: 0;
+  rotate: 160deg;
+  transform: translate(0%, 40%);
+}
+
+.top-right {
+  top: 0;
+  right: 0;
+  z-index: 2;
+  rotate: -160deg;
+  transform: translate(80%, 40%);
+}
+
+@media (max-width: 768px) {
+  .palma {
+    max-width: 100px;
+  }
+}
+
+@media (max-width: 480px) {
+  .palma {
+    max-width: 100px;
+  }
 }
