--- a/app/home/home.scss
+++ b/app/home/home.scss
@@ -38,7 +38,7 @@
 
 @media (max-width: 768px) {
     .leaft {
-        top: 20px; 
+        top: -100px; 
         width: 350px; 
         height: auto;
         rotate: 182deg;
@@ -46,7 +46,22 @@
     }
 
     .logo {
-        top: 120px; 
+        top: -100px; 
+        font-size: 3.5rem; 
+    }
+}
+
+@media (max-width: 1766px) {
+    .leaft {
+        top: -90px; 
+        width: 350px; 
+        height: auto;
+        rotate: 182deg;
+        margin-left: 1rem; 
+    }
+
+    .logo {
+        top: 0px; 
         font-size: 3.5rem; 
     }
 }
