--- a/app/globals.css
+++ b/app/globals.css
@@ -71,11 +71,11 @@ body {
 }
 
 .contenidos {
-  margin-top: 8rem;
-  min-height: 500px;
+  flex: 1;
+  margin-top: 1rem;
   color: white;
   z-index: 10;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .corner-images {
   width: 100%;
